<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ingenian.timeregister.TimeRegisterActivity" 
    android:orientation="vertical">
	<TextView android:id="@+id/date_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	/>
	<Button 
	    android:id="@+id/date_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/date"
	    
	/>	
	<TextView android:id="@+id/morning_label" 
	    android:text="@string/morning"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />    
	<Spinner android:id="@+id/morning_spinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:prompt="@string/morning"	    
	    
	/>
	<TextView android:id="@+id/afternoon_label"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:text="@string/afternoon"/>
	<Spinner android:id="@+id/afternoon_spinner"
	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:prompt="@string/afternoon"
	/>
	<Button
	    android:id="@+id/send_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/send"
	/>    
</LinearLayout>
